Update device for OnePlus5/5T on OREO

--- a/devices.cfg
+++ b/devices.cfg
@@ -206,6 +206,13 @@ version = "1.0"
 arch = arm64
 devicenames = OnePlus5 oneplus5 OnePlus 5 cheeseburger
 
+# OnePlus5T OxygenOS
+[oneplus5T-oos]
+author = "binkybear"
+version = "1.0"
+arch = arm64
+devicenames = OnePlus5T oneplus5T OnePlus 5T dumpling
+
 # OnePlus5 LineageOS
 [oneplus5-cm]
 author = "binkybear"
